--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ panic = 'unwind'
 [workspace]
 members = [
   'node',
-  'pallets/*',
+  'pallets/ocw-circuits/',
+  'pallets/ocw-garble/',
   'runtime',
   'ocw-common'
 ]
