--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "ocw-common",
     "pallets/ocw-circuits",
     "pallets/ocw-garble",
+    "pallets/tx-validation",
 ]
 
 [profile.release]
